# mas-evaluate-script

./: .gitignore  README.md  benchmark.toml  pyproject.toml  study.example.toml
manifests/: benchmark.json  benchmark_01.json  benchmark_02.json  benchmark_03.json  benchmark_04.json  benchmark_05.json  benchmark_06.json  benchmark_07.json  benchmark_08.json  benchmark_09.json  benchmark_10.json  benchmark_11.json  benchmark_12.json  benchmark_13.json  benchmark_14.json  benchmark_15.json  benchmark_16.json  benchmark_17.json  smoke_1.json
src/mas_evaluate_pipeline/: __init__.py  cli.py  constants.py  harness.py  manifest.py  models.py  reporting.py  runtime.py
src/mas_evaluate_pipeline/adapters/: base.py  command.py  mas.py  mini_swe_agent.py
tests/: test_cli_end_to_end.py  test_harness.py  test_manifest.py  test_reporting.py  test_runtime.py
tests/data/: sample_tasks.jsonl
tests/fixtures/: fake_adapter_runner.py  fake_grader.py
